--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Calendario</title>
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>Calendario</title>
+		<script src="main.js" defer></script>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<div id='calendar'></div>
+		<h1>Letras</h1>
+		<p>
+			la cima tan alta el <b>camino tan dañado</b>
+			<br />
+			el caminante sin zapatos y <strong>tu levitando</strong>
+		</p>
+		
+		<h2>siguiente</h2>
 
-</body>
+		<p>
+			<i>el cielo con las manos</i> 
+			<br />
+			no encontre como mantenerme 
+			<br />
+			<span>te toque y cai a tus pies</span>
+		</p>
+		
+		<img src="img/1510005270405.jpg" width="600" height="300" />
+
+		<a target="_blank" href="https://www.youtube.com/watch?v=dszc4f-R8us">Quemando tus recuerdos</a>
+
+		<hr/>
+
+		<p>
+			<blockquote>y que le importa a nadie como esta mi alma
+			<br /> 
+			mas triste que el silencio, mas solo que la luna
+			<br/> 
+			que importa ser poeta o ser basura </blockquote>
+			<cite>Roberto Iniesta</cite>
+		</p>
+
+		<ul>
+			<li><a href="#">Item #1</a></li>
+			<li>Item #2
+				<ul>
+					<li>item #1</li>
+					<li>item #2</li>
+				</ul>
+			</li>
+			<li>Item #3</li>
+			<li>Item #4</li>
+			<li>Item #5</li>
+		</ul>
+
+		<ol>
+			<li><a href="#">Item #1</a></li>
+			<li>Item #2
+				<ul>
+					<li>item #1</li>
+					<li>item #2</li>
+				</ul>
+			</li>
+			<li>Item #3</li>
+			<li>Item #4</li>
+			<li>Item #5</li>
+		</ol>
+	</body>
 </html>
